fixed home two footer section getconnected social link anchor tag wraping and remove unnecessary comments

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1839,6 +1839,10 @@ img {
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
+.bg-black\/80 {
+  background-color: rgb(0 0 0 / 0.8);
+}
+
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
@@ -4027,6 +4031,12 @@ img {
 
   .lg\:absolute {
     position: absolute;
+  }
+
+  .lg\:sl-flex-between {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
   .lg\:sl-flex-start {
